# HW-10

./: Copy_of_HW_9.ipynb  HW_10.ipynb  Hw1.ipynb  README.md  pyproject.toml
quotes_project/quotes/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
quotes_project/quotes/migrations/: 0001_initial.py
quotes_project/quotes/scheduler/: scheduler.py
quotes_project/quotes/services/: gpt_service.py  quoters_parser.py
quotes_project/quotes/static/quotes/: style.css
quotes_project/quotes/templates/quotes/: add_author.html  add_quote.html  author_about.html  base.html  index.html  quotes_by_author.html  select_by_author.html  select_by_tag.html
quotes_project/quotes/templatetags/: extract.py
quotes_project/quotes_project/: settings.py
quotes_project/users/: urls.py  views.py
quotes_project/users/templates/users/: login.html  logout.html  password_reset_comlete.html  password_reset_confirm.html  password_reset_done.html
quotes_project/utils/: migration.py  models_sql.py
