[tool.poetry]
name = "hw-10"
version = "0.1.0"
description = ""
authors = ["Olena Maliarenko"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.3"
psycopg2-binary = "^2.9.9"
sqlalchemy = "^2.0.28"
django-apscheduler = "^0.6.2"
openai = "^1.14.0"
django-environ = "^0.11.2"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
